--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Precio de la luz</title>
 </head>
 <main>
+    <!-- Start header -->
     <header>
         <div class="position">
             <h1>Precio de la luz por horas</h1>
@@ -42,7 +43,19 @@
 
         </section>
     </header>
+    <!-- End header -->
 
+    <!-- Start All day -->
+    <section class="hours">
+        <h2>PRECIO DEL KWH DE LUZ POR HORAS</h2>
+        <div class="position">
+            <div class="allDay">
+            </div>
+        </div>
+    </section>
+    <!-- End All day -->
+
+    <!-- start electric appliances -->
     <div class="title">
         <h2>aparatos eléctricos junto con el precio calculado de
             tenerlos funcionando una hora :</h2>
@@ -263,11 +276,7 @@
             </div>
         </div>
     </section>
-
-
-
-
-
+    <!-- End electric appliances -->
 </main>
 
 
