--- a/index.html
+++ b/index.html
@@ -40,21 +40,16 @@
                 <span class="highDay"></span>
                 <p><i class="fas fa-caret-up"></i><span class="priceHigh"></span> €/kWh</p>
             </div>
-
         </section>
     </header>
     <!-- End header -->
-
     <!-- Start All day -->
     <section class="hours">
-        <h2>PRECIO DEL KWH DE LUZ POR HORAS</h2>
-        <div class="position">
-            <div class="allDay">
-            </div>
+        <h2>PRECIO DEL KWH DE LUZ POR HORAS DE TODO DÍA</h2>
+        <div class="allDay">
         </div>
     </section>
     <!-- End All day -->
-
     <!-- start electric appliances -->
     <div class="title">
         <h2>aparatos eléctricos junto con el precio calculado de
@@ -64,7 +59,7 @@
         <div class="container">
             <div class="overlay">
                 <div class="items head">
-                    <p>Microondas</p>
+                    <p>Horno</p>
                     <hr>
                 </div>
                 <div class="items whValue">
@@ -78,7 +73,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container Griddle">
             <div class="overlay">
                 <div class="items head">
@@ -96,7 +90,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container Dishwasher">
             <div class="overlay">
                 <div class="items head">
@@ -114,7 +107,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container Desktop">
             <div class="overlay">
                 <div class="items head">
@@ -132,7 +124,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container Hairdryer">
             <div class="overlay">
                 <div class="items head">
@@ -150,7 +141,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container CeilingFan">
             <div class="overlay">
                 <div class="items head">
@@ -168,7 +158,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container Refrigerator">
             <div class="overlay">
                 <div class="items head">
@@ -186,7 +175,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container CoffeeMaker">
             <div class="overlay">
                 <div class="items head">
@@ -221,7 +209,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container Dryer">
             <div class="overlay">
                 <div class="items head">
@@ -239,7 +226,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container Heating">
             <div class="overlay">
                 <div class="items head">
@@ -257,7 +243,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container AirConditioning">
             <div class="overlay">
                 <div class="items head">
@@ -278,7 +263,6 @@
     </section>
     <!-- End electric appliances -->
 </main>
-
 
 <body>
     <script src="./app.js"></script>
