--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
             <div class="priceActual">
                 <h2>PRECIO ACTUAL</h2>
                 <span class="time"></span>
-                <p><span class="Price"></span> €/kWh</p>
+                <p><span class="Price"></span> €/Mwh</p>
             </div>
             <div class="Medio">
                 <h2>PRECIO MEDIO DEL DÍA</h2>
                 <span class="date"></span>
-                <p><span class="priceMedio"></span>€/kWh</p>
+                <p><span class="priceMedio"></span>€/Mwh</p>
             </div>
             <div class="Low">
                 <h2>PRECIO MÁS BAJO DEL DÍA</h2>
                 <span class="lowDay"></span>
-                <p><i class="fas fa-caret-down"></i><span class="priceLow"></span> €/kWh</p>
+                <p><i class="fas fa-caret-down"></i><span class="priceLow"></span> €/Mwh</p>
             </div>
             <div class="High">
                 <h2>PRECIO MÁS ALTO DEL DÍA</h2>
                 <span class="highDay"></span>
-                <p><i class="fas fa-caret-up"></i><span class="priceHigh"></span> €/kWh</p>
+                <p><i class="fas fa-caret-up"></i><span class="priceHigh"></span> €/Mwh</p>
             </div>
         </section>
     </header>
     <!-- End header -->
     <!-- Start All day -->
     <section class="hours">
-        <h2>PRECIO DEL KWH DE LUZ POR HORAS DE TODO DÍA</h2>
+        <h2>PRECIO DEL KWH DE LUZ POR HORAS </h2>
         <div class="allDay">
         </div>
     </section>
@@ -68,7 +68,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">1500</span>€/kWh</p>
+                        <p><span class="whPrice">1500</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">1100</span>€/kWh</p>
+                        <p><span class="whPrice">1100</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">330</span>€/kWh</p>
+                        <p><span class="whPrice">330</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">75</span>€/kWh</p>
+                        <p><span class="whPrice">75</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">710</span>€/kWh</p>
+                        <p><span class="whPrice">710</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">35</span>€/kWh</p>
+                        <p><span class="whPrice">35</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">225</span>€/kWh</p>
+                        <p><span class="whPrice">225</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">1000</span>€/kWh</p>
+                        <p><span class="whPrice">1000</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -204,7 +204,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">79</span>€/kWh</p>
+                        <p><span class="whPrice">79</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -221,7 +221,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">2790</span>€/kWh</p>
+                        <p><span class="whPrice">2790</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">18000</span>€/kWh</p>
+                        <p><span class="whPrice">18000</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
@@ -255,7 +255,7 @@
                 <div class="items cart">
                     <p>Precio actual de cada hora </p>
                     <span>
-                        <p><span class="whPrice">3500</span>€/kWh</p>
+                        <p><span class="whPrice">3500</span>€/Mwh</p>
                     </span>
                 </div>
             </div>
