--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="Medio">
                 <h2>PRECIO MEDIO DEL DÍA</h2>
                 <span class="date"></span>
-                <p><span class="priceMedio"></span>€/Mwh</p>
+                <p><span class="priceAverage"></span>€/Mwh</p>
             </div>
             <div class="Low">
                 <h2>PRECIO MÁS BAJO DEL DÍA</h2>
